[package]
name = "expense_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
chrono = "0.4.23"
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

